@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
-<cd:ProductClass xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" name="ACE_FTS" last-modified="2017-04-12">
+<cd:ProductClass xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" name="ACE_FTS" last-modified="2023-06-22">
   <cd:Description>ACE-FTS L2 products</cd:Description>
   <cd:ProductType name="L2_ASCII_main">
     <cd:Description>ACE-FTS L2 Retrievals for main isotopologues (ASCII)</cd:Description>
-    <cd:ProductDefinition id="ACE_FTS_L2_ASCII_main_v2" format="ascii" version="2">
+    <cd:ProductDefinition id="ACE_FTS_L2_ASCII_main" format="ascii" version="2">
       <cd:DetectionRule>
-        <cd:MatchExpression>regex("s[rs][0-9]+(tangrid)?.asc", filename())</cd:MatchExpression>
+        <cd:MatchExpression>regex("s[rs][0-9]+(v[0-9.]+)?(tangrid)?.asc", filename())</cd:MatchExpression>
         <cd:MatchData offset="0">name</cd:MatchData>
         <cd:MatchData offset="15"> ace.s</cd:MatchData>
       </cd:DetectionRule>
@@ -13,9 +13,9 @@
   </cd:ProductType>
   <cd:ProductType name="L2_ASCII_iso">
     <cd:Description>ACE-FTS L2 Retrievals for subsidiary isotopologues (ASCII)</cd:Description>
-    <cd:ProductDefinition id="ACE_FTS_L2_ASCII_iso_v2" format="ascii" version="2">
+    <cd:ProductDefinition id="ACE_FTS_L2_ASCII_iso" format="ascii" version="2">
       <cd:DetectionRule>
-        <cd:MatchExpression>regex("s[rs][0-9]+iso(tangrid)?.asc", filename())</cd:MatchExpression>
+        <cd:MatchExpression>regex("s[rs][0-9]+(v[0-9.]+)?iso(tangrid)?.asc", filename())</cd:MatchExpression>
         <cd:MatchData offset="0">name</cd:MatchData>
         <cd:MatchData offset="15"> ace.s</cd:MatchData>
       </cd:DetectionRule>
