@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<cd:ProductDefinition xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" id="ACE_FTS_L2_ASCII_main_v2" format="ascii" last-modified="2017-04-12">
+<cd:ProductDefinition xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" id="ACE_FTS_L2_ASCII_iso" format="ascii" last-modified="2022-06-22">
   <cd:Record format="ascii">
     <cd:Field name="name_title">
       <cd:Text>
@@ -10,15 +10,13 @@
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="name">
-      <cd:Text>
+      <cd:AsciiLine>
         <cd:Description>name of the file</cd:Description>
-        <cd:ByteSize>11</cd:ByteSize>
-        <cd:NativeType>string</cd:NativeType>
-      </cd:Text>
+      </cd:AsciiLine>
     </cd:Field>
     <cd:Field name="ls_1">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="start_timetag_title">
@@ -38,7 +36,7 @@
     </cd:Field>
     <cd:Field name="ls_2">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="end_timetag_title">
@@ -58,7 +56,7 @@
     </cd:Field>
     <cd:Field name="ls_3">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="start_time_title">
@@ -70,15 +68,13 @@
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="start_time">
-      <cd:Text>
+      <cd:AsciiLine>
         <cd:Description>start time of the measurements</cd:Description>
-        <cd:ByteSize>22</cd:ByteSize>
-        <cd:NativeType>string</cd:NativeType>
-      </cd:Text>
+      </cd:AsciiLine>
     </cd:Field>
     <cd:Field name="ls_4">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="end_time_title">
@@ -90,15 +86,13 @@
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="end_time">
-      <cd:Text>
+      <cd:AsciiLine>
         <cd:Description>end time of the measurements</cd:Description>
-        <cd:ByteSize>22</cd:ByteSize>
-        <cd:NativeType>string</cd:NativeType>
-      </cd:Text>
+      </cd:AsciiLine>
     </cd:Field>
     <cd:Field name="ls_5">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="date_title">
@@ -110,15 +104,13 @@
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="date">
-      <cd:Text>
+      <cd:AsciiLine>
         <cd:Description>date of the measurements</cd:Description>
-        <cd:ByteSize>25</cd:ByteSize>
-        <cd:NativeType>string</cd:NativeType>
-      </cd:Text>
+      </cd:AsciiLine>
     </cd:Field>
     <cd:Field name="ls_6">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="latitude_title">
@@ -138,12 +130,12 @@
     </cd:Field>
     <cd:Field name="ls_7">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="longitude_title">
       <cd:Text>
-        <cd:FixedValue>start_timetag | </cd:FixedValue>
+        <cd:FixedValue>longitude     | </cd:FixedValue>
         <cd:ByteSize>16</cd:ByteSize>
         <cd:NativeType>string</cd:NativeType>
       </cd:Text>
@@ -158,7 +150,7 @@
     </cd:Field>
     <cd:Field name="ls_8">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="beta_angle_title">
@@ -178,12 +170,12 @@
     </cd:Field>
     <cd:Field name="ls_9">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="ls_10">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="empty_line">
@@ -193,7 +185,7 @@
     </cd:Field>
     <cd:Field name="ls_11">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="field_names">
@@ -203,20 +195,29 @@
     </cd:Field>
     <cd:Field name="ls_12">
       <cd:AsciiLineSeparator>
-    </cd:AsciiLineSeparator>
+      </cd:AsciiLineSeparator>
       <cd:Hidden/>
     </cd:Field>
     <cd:Field name="field_data">
       <cd:Array>
         <cd:Dimension><![CDATA[max(1,$num_datalines)]]></cd:Dimension>
-        <cd:AsciiLine>
-          <cd:Description>line with data of fields</cd:Description>
-        </cd:AsciiLine>
+        <cd:Record>
+          <cd:Field name="data">
+            <cd:AsciiLine>
+              <cd:Description>line with data of fields</cd:Description>
+            </cd:AsciiLine>
+          </cd:Field>
+          <cd:Field name="ls">
+            <cd:AsciiLineSeparator>
+            </cd:AsciiLineSeparator>
+            <cd:Hidden/>
+          </cd:Field>
+        </cd:Record>
       </cd:Array>
     </cd:Field>
   </cd:Record>
   <cd:ProductVariable name="num_datalines">
-    <!-- The array field_data has size (total filesize - start of array field_data) / (length one line in the array + sizeof(linefeed)) -->
-    <cd:Init><![CDATA[$num_datalines = (filesize() - byteoffset(/field_data)) / (length(/field_data[0]) + 1)]]></cd:Init>
+    <!-- The array field_data has size (total filesize - start of array field_data) / (length one line in the array) -->
+    <cd:Init><![CDATA[$num_datalines = (filesize() - byteoffset(/field_data)) / length(/field_data[0])]]></cd:Init>
   </cd:ProductVariable>
 </cd:ProductDefinition>
